# pharmacy-chain-microservice

./: .gitignore  docker-compose.yml
backend/libs/fastdbx/: README.md  pyproject.toml  requirements.txt  run.tests.bat
backend/libs/fastdbx/fastdbx/: __init__.py
backend/libs/fastdbx/fastdbx/config/: schemas.py  settings.py
backend/libs/fastdbx/fastdbx/core/: __init__.py  datasource.py  exception.py  model.py  repo.py
backend/libs/fastdbx/fastdbx/transactions/: __init__.py  manager.py  meta.py
backend/libs/fastdbx/tests/: main.py  settings.py
backend/libs/jwt-guard/: README.md  pyproject.toml  requirements.txt  run.test.bat
backend/libs/jwt-guard/jwt-guard/: config.py
backend/libs/jwt-guard/jwt-guard/core/: exceptions.py
backend/libs/jwt-guard/jwt_guard/: config.py
backend/libs/jwt-guard/jwt_guard/api/: routers.py  schemas.py
backend/libs/jwt-guard/jwt_guard/core/: exceptions.py  jwt.py  password.py
backend/libs/jwt-guard/jwt_guard/repo/: auth_model_repo.py
backend/libs/jwt-guard/jwt_guard/security/: auth_bearer.py
backend/libs/jwt-guard/jwt_guard/services/: jwt_service.py
backend/libs/jwt-guard/tests/: app.py  core.py  settings.py
backend/services/medication/: .gitignore  Dockerfile  main.py  requirements.txt  run.dev.bat  run.prod.bat
backend/services/nginx/: default.conf  nginx.conf
backend/services/pharmacy/: .dockerignore  .gitignore  Dockerfile  context.py  db.py  main.py
backend/services/user/: main.py  requirements.txt  run.dev.bat  (+1 more)
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  main.tsx
(+100 files in other folders)
