[project]
name = "jwt-guard"
version = "0.1.0"
description = "Out of the box JWT endpoints and route protection, with customizable token schema"
requires-python = ">=3.7"
dependencies = [
    "fastdbx @ file://../fastdbx",
    "fastapi>=0.115.12"
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha"
]
authors = [
    {name = "Beniamin Pintea"}
]

[tool.setuptools.packages.find]
exclude = ["tests"]

[build-system]
requires = ["setuptools>=80.7.0"]
build-backend = "setuptools.build_meta"
